--- a/Festivals/src/main/resources/templates/_menu.html
+++ b/Festivals/src/main/resources/templates/_menu.html
@@ -9,9 +9,7 @@
   
      | &nbsp;
   
-   <a th:href="@{/login}">Login</a>
-    
-     | &nbsp;
+   <a th:if="${#request.userPrincipal == null}" th:href="@{/login}">Login</a>
       
    <a th:if="${#request.userPrincipal != null}" th:href="@{/logout}">Logout</a>
   
