--- a/Festivals/src/main/resources/templates/login.html
+++ b/Festivals/src/main/resources/templates/login.html
@@ -11,17 +11,19 @@
 	<div th:if="${param.logout}">You have been logged out.</div>
 	<form th:action="@{/login}" method="post">
 	<h2>Login</h2>
-		<div>
-			<label> User Name : <input type="text" name="username" />
-			</label>
-		</div>
-		<div>
-			<label> Password: <input type="password" name="password" />
-			</label>
-		</div>
-		<div>
-			<input type="submit" value="Sign In" />
-		</div>
+		<table>
+        <tr>
+            <td>User:</td>
+            <td><input type="text" name="username" value=""></td>
+        </tr>
+        <tr>
+            <td>Password:</td>
+            <td><input type="password" name="password" /></td>
+        </tr>
+        <tr>
+            <td><input name="submit" type="submit" value="Sign in" /></td>
+        </tr>
+    </table>
 	</form>
 </body>
 </html>
