--- a/Festivals/src/main/resources/templates/single-fest.html
+++ b/Festivals/src/main/resources/templates/single-fest.html
@@ -17,7 +17,9 @@
     
     <hr>
     
+    <a th:if="${#request.userPrincipal == null} " th:href="@{/registartion}">Sing up</a>
     
+    <a  th:if="${#request.userPrincipal != null}" th:href="@{/festivals/{festid}/signup(festid = ${festival.id})}">I'll go</a>
 
 </body>
 </html>
