--- a/Festivals/src/main/resources/templates/festivals.html
+++ b/Festivals/src/main/resources/templates/festivals.html
@@ -3,24 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Festivals</title>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	
-	<style>
-th, td, p, input {
-	font: 14px Verdana;
-}
-
-table, th, td {
-	border: solid 1px black;
-	border-collapse: collapse;
-	padding: 5px;
-	text-align: center;
-}
-
-th {
-	font-weight: bold;
-}
-</style>
+	 <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 </head>
 <body>
 
@@ -28,56 +11,25 @@ th {
 
 	<h1>Festivals list</h1>
 
- <script type="text/javascript">
- 
- var _table_ = document.createElement('table'),
- _tr_ = document.createElement('tr'),
- _th_ = document.createElement('th'),
- _td_ = document.createElement('td');
+	<table border="1">
+		<tr>
+			<th>ID</th>
+			<th>Name</th>
+			<th>Place</th>
+			<th>Date</th>
+			<th>Seating</th>
+		</tr>
+		<tr th:each="festival:${festivals}">
+			<td> <a th:text="${festival.id}" th:href="@{/festivals/{festid}(festid = ${festival.id})}">123 </a> </td>
+			<td th:text="${festival.name}"></td>
+			<td th:text="${festival.place}"></td>
+			<td th:text="${festival.date}"></td>
+			<td th:text="${festival.seating - festival.participants.size()}+'/'+ ${festival.seating}"></td>
 
-//Builds the HTML Table out of myList json data from Ivy restful service.
-function buildHtmlTable(arr) {
-  		var table = _table_.cloneNode(false),
-      	columns = addAllColumnHeaders(arr, table);
- 		 for (var i=0, maxi=arr.length; i < maxi; ++i) {
-      var tr = _tr_.cloneNode(false);
-      for (var j=0, maxj=columns.length; j < maxj ; ++j) {
-          var td = _td_.cloneNode(false);
-              cellValue = arr[i][columns[j]];
-          td.appendChild(document.createTextNode(arr[i][columns[j]] || ''));
-          tr.appendChild(td);
-      }
-      table.appendChild(tr);
-  }
-  return table;
+		</tr>
+	</table>
 	
-}
-
-// Adds a header row to the table and returns the set of columns.
-// Need to do union of keys from all records as some records may not contain
-// all records
-function addAllColumnHeaders(arr, table)
-{
-  var columnSet = [],
-      tr = _tr_.cloneNode(false);
-  for (var i=0, l=arr.length; i < l; i++) {
-      for (var key in arr[i]) {
-          if (arr[i].hasOwnProperty(key) && columnSet.indexOf(key)===-1) {
-              columnSet.push(key);
-              var th = _th_.cloneNode(false);
-              th.appendChild(document.createTextNode(key));
-              tr.appendChild(th);
-          }
-      }
-  }
-  table.appendChild(tr);
-  return columnSet;
-}
-
-$.getJSON('/festivals/get', function(data){
-	 document.body.appendChild(buildHtmlTable(data));
-	 });
-	</script>
+	
 
 </body>
 </html>
