Registration and list of users

--- a/Festivals/src/main/resources/templates/login.html
+++ b/Festivals/src/main/resources/templates/login.html
@@ -22,6 +22,7 @@
         </tr>
         <tr>
             <td><input name="submit" type="submit" value="Sign in" /></td>
+            <td align="right"><a th:href="@{/register}">Sing up</a></td>
         </tr>
     </table>
 	</form>
