--- a/Festivals/src/main/resources/templates/addPerformer.html
+++ b/Festivals/src/main/resources/templates/addPerformer.html
@@ -29,7 +29,7 @@
 		<form th:action="@{addperf}" th:object="${performer}" method="POST">
          <table>
             <tr>
-               <td>Festival Name</td>
+               <td>Performer</td>
                <td><input type="text" th:field="*{name}" /></td>
             </tr>
             <tr>
