--- a/Festivals/src/main/resources/templates/registerSuccessful.html
+++ b/Festivals/src/main/resources/templates/registerSuccessful.html
@@ -16,7 +16,7 @@
        
       <div th:if="${flashUser != null}">
          <ul>
-            <li>User Name: <span th:utext="${flashUser.userName}">..</span></li>
+            <li>First Name: <span th:utext="${flashUser.firstName}">..</span></li>
             <li>Email: <span th:utext="${flashUser.email}">..</span></li>
          </ul>
       </div>
