--- a/Festivals/src/main/resources/templates/_menu.html
+++ b/Festivals/src/main/resources/templates/_menu.html
@@ -1,16 +1,21 @@
 <div xmlns:th="http://www.thymeleaf.org"
      style="border: 1px solid #ccc;padding:5px;margin-bottom:20px;">
- 
-  <a th:href="@{/start}">Home</a>
- 
-     | &nbsp;
-  
+ 	
+ 	<a  th:href="@{/start}">Home</a>		
+ 	
+
+ 	| &nbsp;
+   
    <a th:href="@{/festivals}">Festivals</a>
   
      | &nbsp;
   
-   <a th:if="${#request.userPrincipal == null}" th:href="@{/login}">Login</a>
+   <a  th:if="${#request.userPrincipal == null}" th:href="@{/login}">Login</a>
       
    <a th:if="${#request.userPrincipal != null}" th:href="@{/logout}">Logout</a>
+   
+   | &nbsp;
+  	
+ 	 <a th:if="${#request.userPrincipal != null and #strings.contains(#request.userPrincipal.authorities,'ADMIN')}" th:href="@{/users}">All users</a>
   
 </div>
