Add festival button

--- a/Festivals/src/main/resources/templates/rest/festivalsRest2.html
+++ b/Festivals/src/main/resources/templates/rest/festivalsRest2.html
@@ -32,7 +32,9 @@
       });
 
     });
+    
   </script>
+  
 </head>
 
 <body>
@@ -51,8 +53,26 @@
         <tbody>
 
         </tbody>
+        
       </table>
+      <br>
       
+      <button onclick="myFunction()">Add Festival</button>
+      <button onClick="javascript:window.location.href='/festivals/addfest'">Add festival</button>
 
+	<script>
+		function myFunction() {
+    		var btn = document.createElement("BUTTON");
+    		
+    		button.addEventListener ("click", function() {
+    			  alert("did something");
+    			});
+    		
+    		document.body.appendChild(btn);
+		}
+	</script>
+      
 </body>
+
+
 </html>
