--- a/Festivals/src/main/resources/templates/rest/single-fest-Rest.html
+++ b/Festivals/src/main/resources/templates/rest/single-fest-Rest.html
@@ -18,7 +18,7 @@
 	</script>
 
 
-	<!-- получить спикок исполнителей или фестиваль но ид -->
+	<!-- получить спикок исполнителей или фестиваль по ид -->
 	
 </body>
 </html>
