--- a/Festivals/src/main/resources/templates/authorization/registerSuccessful.html
+++ b/Festivals/src/main/resources/templates/authorization/registerSuccessful.html
@@ -18,8 +18,10 @@
          <ul>
             <li>First Name: <span th:utext="${flashUser.firstName}">..</span></li>
             <li>Email: <span th:utext="${flashUser.email}">..</span></li>
+            <li><br>Please <a href="/login">login</a></li>
          </ul>
       </div>
+      
       
        
    </body>
