--- a/Festivals/src/main/resources/templates/authorization/register.html
+++ b/Festivals/src/main/resources/templates/authorization/register.html
@@ -3,95 +3,145 @@
 <head>
 <meta charset="UTF-8">
 <title>Sign up</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <style>
-         th, td {
-         padding: 5px;
-         }
-         td span  {
-         font-size:90%;
-         font-style: italic;
-         color: red;
-         }
-         .error {
-         color: red;
-         font-style: italic;
-         }
-      </style>
+.login-form {
+	width: 350px;
+	margin: 50px auto;
+}
+
+.login-form form {
+	margin-bottom: 15px;
+	background: #f7f7f7;
+	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+	padding: 30px;
+}
+
+.login-form h2 {
+	margin: 0 0 15px;
+}
+
+.buttonHolder {
+	text-align: center;
+	margin-left: 40px;
+	margin-top: 15px;
+}
+
+td {
+	margin-left: 5px;
+}
+
+td span {
+	font-size: 90%;
+	font-style: italic;
+	color: red;
+}
+
+.error {
+	color: red;
+	font-style: italic;
+}
+</style>
 </head>
 <body>
 	<th:block th:include="/_menu"></th:block>
-	<h1>Registration</h1>
-	
-	<div th:if="${errorMessage != null}"
-           th:utext="${errorMessage}" class="error">...</div>
-		
-		<form th:action="@{/register}" th:object="${appUserForm}" method="POST">
-         <table>
-            <tr>
-               <td>User Name</td>
-               <td><input type="text" th:field="*{userName}" /></td>
-               <td>
-                  <span th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}">..</span>
-               </td>
-            </tr>
-            <tr>
-               <td>Password</td>
-               <td><input type="password" th:field="*{password}" /> </td>
-               <td>
-                  <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}">..</span>
-               </td>
-            </tr>
-            <tr>
-               <td>Confirm</td>
-               <td><input type="password" th:field="*{confirmPassword}" /> </td>
-               <td>
-                  <span th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}">..</span>
-               </td>
-            </tr>
-            <tr>
-               <td>Email</td>
-               <td><input type="text" th:field="*{email}" /> </td>
-               <td>
-                  <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}">..</span>
-               </td>
-            </tr>
-            <tr>
-               <td>First Name</td>
-               <td><input type="text" th:field="*{firstName}" /> </td>
-               <td>
-                  <span th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">..</span>
-               </td>
-            </tr>
-            <tr>
-               <td>Last Name</td>
-               <td><input type="text" th:field="*{lastName}" /> </td>
-               <td>
-                  <span th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">..</span>
-               </td>
-            </tr>
-            <tr>
-               <td>Age</td>
-               <td><input type="text" th:field="*{age}" /> </td>
-               <td>
-                  <span th:if="${#fields.hasErrors('age')}" th:errors="*{age}">..</span>
-               </td>
-            </tr>
-            <tr>
-            	<td>Phone</td>
-               <td><input type="text" th:field="*{phone}" /> </td>
-               <td><span th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}">..</span></td>
-            </tr>
-            
-            <tr>
-               <td>&nbsp;</td>
-               <td>
-                  <input type="submit" value="Submit" />
-                  <a th:href="@{/}">Cancel</a>
-               </td>
-               <td>&nbsp;</td>
-            </tr>
-         </table>
-      </form>
+
+	<div th:if="${errorMessage != null}" th:utext="${errorMessage}"
+		class="error">...</div>
+
+
+	<div class="login-form">
+		<form th:action="@{/register}" th:object="${appUserForm}"
+			method="POST">
+			<h2 class="text-center">Registration</h2>
+			<table>
+				<tr>
+					<td>User Name</td>
+					<td><input type="text" th:field="*{userName}" /></td>
+					
+				</tr>
+				<tr>
+				<td colspan="3" class="text-center"><span th:if="${#fields.hasErrors('userName')}"
+						th:errors="*{userName}">..</span></td>
+				</tr>
+				<tr>
+					<td>Password</td>
+					<td><input type="password" th:field="*{password}" /></td>
+
+				</tr>
+				<tr>
+				<td colspan="3" class="text-center"><span th:if="${#fields.hasErrors('password')}"
+						th:errors="*{password}">..</span></td>
+				</tr>
+				<tr>
+					<td>Confirm</td>
+					<td><input type="password" th:field="*{confirmPassword}" /></td>
+
+				</tr>
+				<tr>
+				<td colspan="3" class="text-center"><span th:if="${#fields.hasErrors('confirmPassword')}"
+						th:errors="*{confirmPassword}">..</span></td>
+				</tr>
+				<tr>
+					<td>Email</td>
+					<td><input type="text" th:field="*{email}" /></td>
+
+				</tr>
+				<tr>
+				<td colspan="3" class="text-center"><span th:if="${#fields.hasErrors('email')}"
+						th:errors="*{email}">..</span></td>
+				</tr>
+				<tr>
+					<td>First Name</td>
+					<td><input type="text" th:field="*{firstName}" /></td>
+
+				</tr>
+				<tr>
+				<td colspan="3" class="text-center"><span th:if="${#fields.hasErrors('firstName')}"
+						th:errors="*{firstName}">..</span></td>
+				</tr>
+				<tr>
+					<td>Last Name</td>
+					<td><input type="text" th:field="*{lastName}" /></td>
+
+				</tr>
+				<tr>
+				<td colspan="3" class="text-center"><span th:if="${#fields.hasErrors('lastName')}"
+						th:errors="*{lastName}">..</span></td>
+				</tr>
+				<tr>
+					<td>Age</td>
+					<td><input type="text" th:field="*{age}" /></td>
+
+				</tr>
+				<tr>
+				<td colspan="3" class="text-center"><span th:if="${#fields.hasErrors('age')}"
+						th:errors="*{age}">..</span></td>
+				</tr>
+				<tr>
+					<td>Phone</td>
+					<td><input type="text" th:field="*{phone}" /></td>
+				</tr>
+				<tr>
+				<td colspan="3" class="text-center"><span th:if="${#fields.hasErrors('phone')}"
+						th:errors="*{phone}">..</span></td>
+				</tr>
+
+				<tr>
+					<td>&nbsp;</td>
+					<td> 
+					<div class="buttonHolder" > 
+					<input type="submit" value="Submit" /> <a th:href="@{/}">Cancel</a>
+					</div>
+					</td>
+					<td>&nbsp;</td>
+				</tr>
+			</table>
+		</form>
+
+	</div>
 
 
 </body>
