--- a/Festivals/src/main/resources/templates/authorization/login.html
+++ b/Festivals/src/main/resources/templates/authorization/login.html
@@ -48,7 +48,7 @@
 		<table>
         <tr >
             <td>User:</td>
-            <td><input type="text"  name="username" value=""></td>
+            <td><input type="text"  name="username" value="" autofocus></td>
         </tr>
         <tr >
             <td>Password:</td>
