--- a/Festivals/src/main/resources/templates/festivals/changeFestival.html
+++ b/Festivals/src/main/resources/templates/festivals/changeFestival.html
@@ -3,57 +3,83 @@
 <head>
 <meta charset="UTF-8">
 <title>Change Festival</title>
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script
+	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <style>
-         th, td {
-         padding: 5px;
-         }
-         td span  {
-         font-size:90%;
-         font-style: italic;
-         color: red;
-         }
-         .error {
-         color: red;
-         font-style: italic;
-         }
-      </style>
+.login-form {
+	width: 400px;
+	margin: 50px auto;
+}
+
+.login-form form {
+	margin-bottom: 15px;
+	background: #f7f7f7;
+	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+	padding: 30px;
+}
+
+.login-form h2 {
+	margin: 0 0 15px;
+}
+
+th, td {
+	padding: 5px;
+}
+
+td span {
+	font-size: 90%;
+	font-style: italic;
+	color: red;
+}
+
+.error {
+	color: red;
+	font-style: italic;
+}
+</style>
 </head>
 <body>
 
 	<th:block th:include="/_menu"></th:block>
-	<h1>Make changes in festival</h1>
 	
-	<div th:if="${errorMessage != null}"
-           th:utext="${errorMessage}" class="error">...</div>
-		
-		<form th:action="@{change}" th:object="${festival}" method="POST">
-         <table>
-            <tr>
-               <td>Festival Name</td>
-               <td><input type="text" th:field="*{name}" /></td>
-            </tr>
-            <tr>
-               <td>Place</td>
-               <td><input type="text" th:field="*{place}" /> </td>
-            </tr>
-            <tr>
-               <td>Date</td>
-               <td><input type="date"  pattern="yyyy-MM-dd" th:field="*{date}" /> </td>
-            </tr>
-            <tr>
-               <td>Seating</td>
-               <td><input type="text" th:field="*{seating}"/> </td>
-            </tr>
-            <tr>
-               <td>&nbsp;</td>
-               <td>
-                  <input type="submit" value="Submit" />
-                  <a th:href="@{/festivals}">Cancel</a>
-               </td>
-               <td>&nbsp;</td>
-            </tr>
-         </table>
-      </form>
+
+	<div th:if="${errorMessage != null}" th:utext="${errorMessage}"
+		class="error">...</div>
+
+	<div class="login-form">
+	<form th:action="@{change}" th:object="${festival}" method="POST">
+	<h2 align="center">Make changes in festival</h2>
+		<table>
+			<tr>
+				<td>Festival Name</td>
+				<td><input type="text" th:field="*{name}" /></td>
+			</tr>
+			<tr>
+				<td>Place</td>
+				<td><input type="text" th:field="*{place}" /></td>
+			</tr>
+			<tr>
+				<td>Date</td>
+				<td><input type="date" pattern="yyyy-MM-dd" th:field="*{date}" />
+				</td>
+			</tr>
+			<tr>
+				<td>Seating</td>
+				<td><input type="text" th:field="*{seating}" /></td>
+			</tr>
+			<tr>
+				<td>&nbsp;</td>
+				<td><input type="submit" value="Submit" /> <a
+					th:href="@{/festivals}">Cancel</a></td>
+				<td>&nbsp;</td>
+			</tr>
+		</table>
+	</form>
+	</div>
 
 </body>
 </html>
