--- a/Festivals/src/main/resources/templates/festivals/addPerformer.html
+++ b/Festivals/src/main/resources/templates/festivals/addPerformer.html
@@ -3,45 +3,70 @@
 <head>
 <meta charset="UTF-8">
 <title>Add Festival</title>
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script
+	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <style>
-         th, td {
-         padding: 5px;
-         }
-         td span  {
-         font-size:90%;
-         font-style: italic;
-         color: red;
-         }
-         .error {
-         color: red;
-         font-style: italic;
-         }
-      </style>
+.login-form {
+	width: 400px;
+	margin: 50px auto;
+}
+
+.login-form form {
+	margin-bottom: 15px;
+	background: #f7f7f7;
+	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+	padding: 30px;
+}
+
+.login-form h2 {
+	margin: 0 0 15px;
+}
+
+th, td {
+	padding: 5px;
+}
+
+td span {
+	font-size: 90%;
+	font-style: italic;
+	color: red;
+}
+
+.error {
+	color: red;
+	font-style: italic;
+}
+</style>
 </head>
 <body>
 
 	<th:block th:include="/_menu"></th:block>
-	<h1>Adding a performer</h1>
-	
-	<div th:if="${errorMessage != null}"
-           th:utext="${errorMessage}" class="error">...</div>
-		
+
+	<div th:if="${errorMessage != null}" th:utext="${errorMessage}"
+		class="error">...</div>
+
+
+	<div class="login-form">
 		<form th:action="@{addperf}" th:object="${performer}" method="POST">
-         <table>
-            <tr>
-               <td>Performer</td>
-               <td><input type="text" th:field="*{name}" /></td>
-            </tr>
-            <tr>
-               <td>&nbsp;</td>
-               <td>
-                  <input type="submit" value="Submit" />
-                  <a th:href="@{/festivals}">Cancel</a>
-               </td>
-               <td>&nbsp;</td>
-            </tr>
-         </table>
-      </form>
+		<h2 align="center">Adding a performer</h2>
+			<table>
+				<tr>
+					<td>Performer</td>
+					<td><input type="text" th:field="*{name}" /></td>
+				</tr>
+				<tr>
+					<td>&nbsp;</td>
+					<td><input type="submit" value="Submit" /> <a
+						th:href="@{/festivals}">Cancel</a></td>
+					<td>&nbsp;</td>
+				</tr>
+			</table>
+		</form>
+	</div>
 
 </body>
 </html>
