--- a/Festivals/src/main/resources/templates/users.html
+++ b/Festivals/src/main/resources/templates/users.html
@@ -3,15 +3,56 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Festivals</title>
-	 <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
+	<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script
+	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	 
+<style type="text/css">
+.login-form {
+	width: 800px;
+	margin: 50px auto;
+	background: #f7f7f7;
+	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+	padding: 40px;
+}
+
+
+.login-form h2 {
+	margin: 0 0 15px;
+	text-align: center;
+}
+
+th, td {
+	padding: 10px;
+}
+
+tr:hover {
+	background-color: #fcf8e3;
+}
+
+ tr, td {
+	border-bottom: 1px solid black;
+} 
+
+ table {
+	border-collapse: collapse;
+
+} 
+</style>	 
+	 
 </head>
 <body>
 
 	<th:block th:include="/_menu"></th:block>
 
-	<h1>Users list</h1>
 
-	<table border="1">
+	<div class="login-form">
+	<h2>Users list</h2>
+
+	<table border="0">
 		<tr>
 			<th>ID</th>
 			<th>First name</th>
@@ -35,7 +76,7 @@
 		</tr>
 		
 	</table>
-	
+	</div>
 	
 
 </body>
